--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,35 +7,26 @@ on:
 
 permissions:
   contents: write
-  pages: write
-  id-token: write
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout source code
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      # 2. Setup Node.js
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: npm
 
-      # 3. Install dependencies (clean + deterministic)
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      # 4. Build React app
-      # CI=false is REQUIRED for CRA on GitHub Actions
       - name: Build React app
         run: CI=false npm run build
 
-      # 5. Deploy build/ to gh-pages branch
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
