--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,18 +15,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repo
+      # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Setup Node (CRA is stable on Node 18)
+      # 2. Setup Node.js (NO cache)
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: npm
 
-      # 3. Install dependencies (NO lock file → npm install)
+      # 3. Install dependencies
       - name: Install dependencies
         run: npm install
 
